--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=myPage
 server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.username=root
+#mySql? ??? ???? ?? ???? ????
+#url ??? ? ???? db?? ???! ??? springdb ?? ??? ?? ??.
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+#spring.datasource.username=root
+#spring.datasource.password=test1234
+
+#???? ??? ???? ?? mySql? ????
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=SYSTEM
 spring.datasource.password=test1234
 
 # mapper.xml
