스프링 실습 3일차 집가서 수정할것

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ mybatis.mapper-locations: mybatis-mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 # package model
 mybatis.type-aliases-package=com.mySpringServer.myPage.model
+
+#???? ??
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+#??? ?? ?? ????? false
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+logging.level.org.thymeleaf=INFO
